--- a/src/main/java/it/polimi/se2018/view/GUISwing.form
+++ b/src/main/java/it/polimi/se2018/view/GUISwing.form
@@ -119,14 +119,14 @@
               </component>
             </children>
           </grid>
-          <grid id="6219b" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="ff72f" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="8a8c7" class="javax.swing.JLabel">
+              <component id="bbe98" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -134,44 +134,14 @@
               </component>
             </children>
           </grid>
-          <grid id="cb38f" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="49f2" class="javax.swing.JLabel">
-                <constraints border-constraint="Center"/>
-                <properties>
-                  <text value=""/>
-                </properties>
-              </component>
-            </children>
-          </grid>
-          <grid id="7161c" layout-manager="BorderLayout" hgap="0" vgap="0">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="64abd" class="javax.swing.JLabel">
-                <constraints border-constraint="Center"/>
-                <properties>
-                  <text value=""/>
-                </properties>
-              </component>
-            </children>
-          </grid>
-          <grid id="85646" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="4d149" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="8a735" class="javax.swing.JLabel">
+              <component id="e91c0" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -179,14 +149,14 @@
               </component>
             </children>
           </grid>
-          <grid id="ef549" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="f753" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="4fa0f" class="javax.swing.JLabel">
+              <component id="18ba2" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -194,14 +164,14 @@
               </component>
             </children>
           </grid>
-          <grid id="cdcd0" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="aecf2" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="5fba1" class="javax.swing.JLabel">
+              <component id="de3f5" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -209,14 +179,14 @@
               </component>
             </children>
           </grid>
-          <grid id="fe3fc" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="e1b87" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="95c51" class="javax.swing.JLabel">
+              <component id="510d5" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -224,14 +194,29 @@
               </component>
             </children>
           </grid>
-          <grid id="9f33c" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="acb3d" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="74fc8" class="javax.swing.JLabel">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <text value=""/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="f91ed" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="aabde" class="javax.swing.JLabel">
+              <component id="fe479" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -239,14 +224,14 @@
               </component>
             </children>
           </grid>
-          <grid id="d32be" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="86cda" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="31a28" class="javax.swing.JLabel">
+              <component id="1d2d4" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -254,14 +239,14 @@
               </component>
             </children>
           </grid>
-          <grid id="2e356" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="385b" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="47c0d" class="javax.swing.JLabel">
+              <component id="24c3a" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -269,14 +254,14 @@
               </component>
             </children>
           </grid>
-          <grid id="5e6bf" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="4d72b" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="3bc10" class="javax.swing.JLabel">
+              <component id="b3395" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -284,14 +269,29 @@
               </component>
             </children>
           </grid>
-          <grid id="46d94" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="edde2" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="1666f" class="javax.swing.JLabel">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <text value=""/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="d01f0" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="a0bc8" class="javax.swing.JLabel">
+              <component id="b85f2" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -299,14 +299,14 @@
               </component>
             </children>
           </grid>
-          <grid id="dbefe" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="22f7" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="7e4c" class="javax.swing.JLabel">
+              <component id="8ad71" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -314,14 +314,14 @@
               </component>
             </children>
           </grid>
-          <grid id="ac6f7" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="d0caf" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="8cc68" class="javax.swing.JLabel">
+              <component id="70165" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -329,14 +329,14 @@
               </component>
             </children>
           </grid>
-          <grid id="7f1f7" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="fcb5c" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="ca9c6" class="javax.swing.JLabel">
+              <component id="2ad19" class="javax.swing.JLabel">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
@@ -401,8 +401,31 @@
               </component>
             </children>
           </grid>
+          <grid id="fb03d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <vspacer id="40464">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
+            </children>
+          </grid>
         </children>
       </grid>
+      <component id="6c09e" class="javax.swing.JButton" binding="piazzaUnDadoButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Piazza un Dado"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
